--- a/pages/PR folder/wellfare-pages/education.html
+++ b/pages/PR folder/wellfare-pages/education.html
@@ -50,7 +50,7 @@
     </div>
 
 
-    <div class="ed-intro-line">
+    <div class="intro-line">
     <h1>Education Wellfare Development</h1>
     </div>
 
