--- a/pages/PR folder/wellfare-pages/rural.html
+++ b/pages/PR folder/wellfare-pages/rural.html
@@ -49,8 +49,28 @@
         <a href="/pages/about.html"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
     </div>
 
+    <div class="intro-line">
+        <h1>Rural Development</h1>
+    </div>
 
-    
+    <div class="circle-elements-container">
+        <h3>Mr. Reddy Garu have been working on improvement of rural area situations. From basic facilities to survive peacefully, to better infrastructure and education facilities and medical facilities availability.</h3>
+        <!-- <ul>
+            <li>
+                <img src="/images/school.png" alt="">
+                <h4>Schools</h4>
+            </li>
+            <li>
+                <img src="/images/college.png" alt="">
+                <h4>Colleges</h4>
+            </li>
+            <li>
+                <img src="/images/free.png" alt="">
+                <h4>Free Education</h4>
+            </li>
+        </ul> -->
+    </div>
+
 
     <!-- Footer -->
     <div class="footer-curl">
