--- a/pages/PR folder/wellfare-pages/women.html
+++ b/pages/PR folder/wellfare-pages/women.html
@@ -49,6 +49,14 @@
         <a href="/pages/about.html"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
     </div>
 
+    <div class="intro-line">
+        <h1>Women Empowerment</h1>
+    </div>
+
+    <div class="circle-elements-container">
+        <h3>Mr. Reddy Garu have been working on improvement of rural area situations. From basic facilities to survive peacefully, to better infrastructure and education facilities and medical facilities availability.</h3>
+    </div>
+
 
     
 
