--- a/pages/about.html
+++ b/pages/about.html
@@ -89,11 +89,11 @@
         </div>
     </div>
 
-    <div class="contact-button">
+    <!-- <div class="contact-button">
         <div class="con-link">
             <a class="bu" href="contact.html">Contact<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
         </div>
-    </div>
+    </div> -->
 
     <div class="about-matter">
         <div class="blank-space"></div>
