--- a/pages/about.html
+++ b/pages/about.html
@@ -38,7 +38,7 @@
         <ul>
             <li><a href="/index.html"><img src="/images/logo.png" alt=""></a></li>
             <li class="hide-mobile"><a href="/index.html">Home</a></li>
-            <span><li class="hide-mobile"><a href="/pages/about.html">About</a></li></span>
+            <li class="hide-mobile"><span><a href="/pages/about.html">About</a></span></li>
             <li class="hide-mobile"><a href="/pages/activities.html">Activities</a></li>
             <li class="hide-mobile"><a href="/pages/media.html">PRs</a></li>
             <li class="hide-mobile"><a href="/pages/contact.html">Contact</a></li>
@@ -54,7 +54,7 @@
     </div>
 
     <div class="intro-profileimage-contaier">
-        <img src="/images/profile4.png" alt="">
+        <img src="/images/Reddy Sir.png" alt="">
         <div class="profile-info">
             <table>
                 <tr>
