--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="contact_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />    
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="font-awesome.min.css">
     <link rel="stylesheet" href="con-temp-style.css">
@@ -40,7 +38,7 @@
             <li><a href="/pages/activities.html">Activities</a></li>
             <li><a href="/pages/media.html">PRs</a></li>
             <li><a href="/pages/contact.html">Contact</a></li>
-            <li><a href="https://forms.zohopublic.in/technodyne/form/ClientDetails/formperma/TmO_hCWbUbOjMjP3bXzKX3YH2_axnv7WTAm5vAVU2s4" target="_blank">Register</a></li>
+            <li><a href="/pages/register.html">Register</a></li>
         </ul>
         <ul>
             <li><a href="/index.html"><img src="/images/logo.png" alt=""></a></li>
@@ -49,12 +47,26 @@
             <li class="hide-mobile"><a href="/pages/activities.html">Activities</a></li>
             <li class="hide-mobile"><a href="/pages/media.html">PRs</a></li>
             <span><li class="hide-mobile"><a href="/pages/contact.html">Contact</a></li></span>
-            <li class="hide-mobile"><a href="https://forms.zohopublic.in/technodyne/form/ClientDetails/formperma/TmO_hCWbUbOjMjP3bXzKX3YH2_axnv7WTAm5vAVU2s4" target="_blank">Register</a></li>
+            <li class="hide-mobile"><a href="/pages/register.html">Register</a></li>
             <li class="hide-pc" onclick=showSidebar()><a href="#"><i class="fa fa-bars"style="font-size:30px"></i></a></li>
         </ul>
     </nav>
     
     <!-- -----------Body--------- -->
+
+    <!-- Response Google Sheet -->
+    <!-- https://docs.google.com/spreadsheets/d/13OvkRATeMpU7BF4ZfAmteFiFS2Q2Pk4pxYnC0ws5bno/edit?gid=0#gid=0 -->
+
+    <div class="description-contact">
+        <h1>Your Voice Matters to Nooka Reddy.</h1>
+        <p>As a dedicated public leader, Nooka Reddy believes in open communication and accessibility. Whether you have suggestions, require assistance, or wish to invite him to a community event, please reach out. Your input is crucial in our collective efforts to build a better future. 
+            <br> <br>
+            Don't just be a spectator – be a part of the change. Nooka Reddy is actively working to address the challenges facing our community, and your insights are vital. Let's collaborate to transform ideas into tangible results. Your voice can shape policies, drive initiatives, and create a lasting impact on the lives of our fellow citizens.
+        </p>
+
+    </div>
+
+    <!-- Form -->
     <section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -176,6 +188,7 @@
             <ul>
                 <li><a href="/pages/activities.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> Activities</a></li>
                 <li><a href="/pages/media.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> PRs</a></li>
+                <li><a href="/pages/register.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> Register</a></li>
             </ul>
         </div>
         <div class="foot-data">
