--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="/pages/activities.html">Activities</a></li>
             <li><a href="/pages/media.html">PRs</a></li>
             <li><a href="/pages/contact.html">Contact</a></li>
-            <li><a href="https://forms.zohopublic.in/technodyne/form/ClientDetails/formperma/TmO_hCWbUbOjMjP3bXzKX3YH2_axnv7WTAm5vAVU2s4" target="_blank">Register</a></li>
+            <li><a href="/pages/register.html">Register</a></li>
         </ul>
         <ul>
             <li><a href="/index.html"><img src="images/logo.png" alt=""></a></li>
@@ -38,7 +38,7 @@
             <li class="hide-mobile"><a href="/pages/activities.html">Activities</a></li>
             <li class="hide-mobile"><a href="/pages/media.html">PRs</a></li>
             <li class="hide-mobile"><a href="/pages/contact.html">Contact</a></li>
-            <li class="hide-mobile"><a href="https://forms.zohopublic.in/technodyne/form/ClientDetails/formperma/TmO_hCWbUbOjMjP3bXzKX3YH2_axnv7WTAm5vAVU2s4" target="_blank">Register</a></li>
+            <li class="hide-mobile"><a href="/pages/register.html">Register</a></li>
             <li class="hide-pc" onclick=showSidebar()><a href="#"><i class="fa fa-bars"style="font-size:30px"></i></a></li>
         </ul>
     </nav>
@@ -63,6 +63,7 @@
             <li><a href="pages/activities.html">Activities</a></li>
             <li><a href="pages/media.html">PRs</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="pages/register.html">Register</a></li>
         </ul>
      </div>
 
