--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,7 @@
             <li><a href="/pages/activities.html">Activities</a></li>
             <li><a href="/pages/media.html">PRs</a></li>
             <li><a href="/pages/contact.html">Contact</a></li>
-            <li><a href="https://forms.zohopublic.in/technodyne/form/ClientDetails/formperma/TmO_hCWbUbOjMjP3bXzKX3YH2_axnv7WTAm5vAVU2s4" target="_blank">Register</a></li>
+            <li><a href="/pages/register.html">Register</a></li>
         </ul>
         <ul>
             <li><a href="/index.html"><img src="/images/logo.png" alt=""></a></li>
@@ -42,7 +42,7 @@
             <li class="hide-mobile"><a href="/pages/activities.html">Activities</a></li>
             <li class="hide-mobile"><a href="/pages/media.html">PRs</a></li>
             <li class="hide-mobile"><a href="/pages/contact.html">Contact</a></li>
-            <li class="hide-mobile"><a href="https://forms.zohopublic.in/technodyne/form/ClientDetails/formperma/TmO_hCWbUbOjMjP3bXzKX3YH2_axnv7WTAm5vAVU2s4" target="_blank">Register</a></li>
+            <li class="hide-mobile"><a href="/pages/register.html">Register</a></li>
             <li class="hide-pc" onclick=showSidebar()><a href="#"><i class="fa fa-bars"style="font-size:30px"></i></a></li>
         </ul>
     </nav>
@@ -190,6 +190,7 @@
             <ul>
                 <li><a href="/pages/activities.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> Activities</a></li>
                 <li><a href="/pages/media.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> PRs</a></li>
+                <li><a href="/pages/register.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> Register</a></li>
             </ul>
         </div>
         <div class="foot-data">
