--- a/pages/activities.html
+++ b/pages/activities.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="activities_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.2.0/jquery.magnific-popup.min.js"></script>
     <link rel="shortcut icon" href="/images/fav.png" type="image/x-icon">
@@ -34,7 +33,7 @@
             <li><a href="/pages/activities.html">Activities</a></li>
             <li><a href="/pages/media.html">PRs</a></li>
             <li><a href="/pages/contact.html">Contact</a></li>
-            <li><a href="https://forms.zohopublic.in/technodyne/form/ClientDetails/formperma/TmO_hCWbUbOjMjP3bXzKX3YH2_axnv7WTAm5vAVU2s4" target="_blank">Register</a></li>
+            <li><a href="/pages/register.html">Register</a></li>
         </ul>
         <ul>
             <li><a href="/index.html"><img src="/images/logo.png" alt=""></a></li>
@@ -43,7 +42,7 @@
             <span><li class="hide-mobile"><a href="/pages/activities.html">Activities</a></li></span>
             <li class="hide-mobile"><a href="/pages/media.html">PRs</a></li>
             <li class="hide-mobile"><a href="/pages/contact.html">Contact</a></li>
-            <li class="hide-mobile"><a href="https://forms.zohopublic.in/technodyne/form/ClientDetails/formperma/TmO_hCWbUbOjMjP3bXzKX3YH2_axnv7WTAm5vAVU2s4" target="_blank">Register</a></li>
+            <li class="hide-mobile"><a href="/pages/register.html">Register</a></li>
             <li class="hide-pc" onclick=showSidebar()><a href="#"><i class="fa fa-bars"style="font-size:30px"></i></a></li>
         </ul>
     </nav>
@@ -160,6 +159,7 @@
             <ul>
                 <li><a href="/pages/activities.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> Activities</a></li>
                 <li><a href="/pages/media.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> PRs</a></li>
+                <li><a href="/pages/register.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> Register</a></li>
             </ul>
         </div>
         <div class="foot-data">
