--- a/pages/register.html
+++ b/pages/register.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nooka Reddy</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/pages/media_style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <link rel="stylesheet" href="contact_style.css">
+    <link rel="stylesheet" href="register_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="/images/fav.png" type="image/x-icon">
-    <link rel="stylesheet" href="wellfare-style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />    
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="font-awesome.min.css">
+    <link rel="stylesheet" href="con-temp-style.css">
+	<link rel="shortcut icon" href="/images/fav.png" type="image/x-icon">
 </head>
 <body>
 
@@ -37,54 +40,21 @@
             <li class="hide-mobile"><a href="/pages/about.html">About</a></li>
             <li class="hide-mobile"><a href="/pages/activities.html">Activities</a></li>
             <li class="hide-mobile"><a href="/pages/media.html">PRs</a></li>
-            <li class="hide-mobile"><a href="/pages/contact.html">Contact</a></li>
+            <span><li class="hide-mobile"><a href="/pages/contact.html">Contact</a></li></span>
             <li class="hide-mobile"><a href="/pages/register.html">Register</a></li>
             <li class="hide-pc" onclick=showSidebar()><a href="#"><i class="fa fa-bars"style="font-size:30px"></i></a></li>
         </ul>
     </nav>
 
     <!-- Body -->
-
-    <div class="back-button-top">
-        <a href="/pages/about.html"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
+     <div class="reg-intro-line">
+        <h1>Registration for MLC Graduate</h1>
+        <p>Register here to vote for Member of Legislative Council</p>
+     </div>
+    <div class="reg-link">
+        <a href="https://forms.zohopublic.in/technodyne/form/ClientDetails/formperma/TmO_hCWbUbOjMjP3bXzKX3YH2_axnv7WTAm5vAVU2s4" target="_blank">Register</a>
     </div>
-
-
-    <div class="intro-line">
-    <h1>Education Wellfare Development</h1>
-    </div>
-
-    <div class="circle-elements-container">
-        <h3>Mr. Reddy Garu has been providing free education to those who cannot afford, to support the families and the future.</h3>
-        <ul>
-            <li>
-                <img src="/images/school.png" alt="">
-                <h4>Schools</h4>
-            </li>
-            <li>
-                <img src="/images/college.png" alt="">
-                <h4>Colleges</h4>
-            </li>
-            <li>
-                <img src="/images/free.png" alt="">
-                <h4>Free Education</h4>
-            </li>
-        </ul>
-    </div>
-    <div class="know-more-button">
-        <a href="#">Know More</a>
-    </div>
-
-    <div class="ed-curl1">
-        <p></p>
-    </div>
-
-    <div class="education-matter">
-        <p>Mr. Reddy Garu have provided free education to school and College students of economically lower background students. Reddy Garu supported many families to improve the family situations by providing free education to their children. Reddy Garu established various schools and colleges, And have been providing wuality education to students that are economically weak. Mr. Reddy Garu contributed a lot for the education system in various locations, and have been supporting the students to get quality education. </p>
-    </div>
-
-
-
+    
 
     <!-- Footer -->
     <div class="footer-curl">
@@ -93,7 +63,7 @@
 
     <div class="footer-info">
         <div class="foot-data">
-            <h2>Kolli Nooka Reddy</h2>
+            <h2><span>Kolli Nooka Reddy</span></h2>
             <h3>+91 8019219266, knreddy.aditya@gmail.com Visakhapatnam,<br>Andhra Pradesh</h3>
         </div>
         <div class="foot-data">
@@ -121,20 +91,5 @@
             </ul>
         </div>
     </div>
-
-
-    <script>
-        const header = document.querySelector('nav');
-        const scrollThreshold = 125; // Scroll distance before fixing header
-
-        window.addEventListener('scroll', () => {
-        if (window.pageYOffset >= scrollThreshold) {
-            header.classList.add('fixed');
-        } else {
-            header.classList.remove('fixed');
-        }
-        });
-    </script>
-    
 </body>
 </html>
