--- a/pages/about.html
+++ b/pages/about.html
@@ -71,7 +71,7 @@
                 </tr>
                 <tr>
                     <th>Address:</th>
-                    <td>Gajuwaka, Visakhapatnam</td>
+                    <td>Reddy Street, Malkapuram,<br> Visakhapatnam(West Constituency)</td>
                 </tr>
                 <tr>
                     <th>Residence:</th>
@@ -83,7 +83,7 @@
                 </tr>
                 <tr>
                     <th>Phone:</th>
-                    <td>+91 8019219266</td>
+                    <td>+91 8019219266 <br>+91 8074622788</td>
                 </tr>
             </table>
         </div>
