--- a/pages/PR folder/wellfare-pages/rural.html
+++ b/pages/PR folder/wellfare-pages/rural.html
@@ -55,12 +55,12 @@
 
     
     <div class="circle-elements-container-rural">
-        <h3>Mr. Reddy Garu have been working on improvement of rural area situations. From basic facilities to survive peacefully, to better infrastructure and education facilities and medical facilities availability.</h3>
+        <h3>Mr. Nooka Reddy have been working on improvement of rural area situations. From basic facilities to survive peacefully, to better infrastructure and education facilities and medical facilities availability.</h3>
     </div>
 
     <div class="n-image19">
         <img src="/images/fb_images/image13.png" alt="">
-        <p>Nooka Reddy Garu's work for the rural development has been remarkable. His strong dedication towards the growth of lower middle class and his soft heart towards the people has brought an enormous change in the rural areas of Visakhapatnam.</p>
+        <p>Nooka Reddy's work for the rural development has been remarkable. His strong dedication towards the growth of lower middle class and his soft heart towards the people has brought an enormous change in the rural areas of Visakhapatnam.</p>
     </div>
     <div class="rural-acts2">
         <div class="im-cont">
