--- a/pages/PR folder/wellfare-pages/women.html
+++ b/pages/PR folder/wellfare-pages/women.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="circle-elements-container-rural">
-        <h3>Mr. Reddy Garu believes that, Women can bring change in the society to great lenghts.
+        <h3>Mr. Nooka Reddy believes that, Women can bring change in the society to great lenghts.
              And with good support, the Nation can become better.
 
         </h3>
@@ -62,7 +62,7 @@
 
     <div class="n-image26">
         <img src="/images/fb_images/image17.png" alt="">
-        <p>Nooka Reddy Garu's work for the Empowerment of women has been remarkable. 
+        <p>Nooka Reddy's work for the Empowerment of women has been remarkable. 
             He fought so strong to bring changes that support women in many ways. 
             He fought to make changes in the system to bring resources that would help women 
             develop and to help women contribute in the development of Visakhapatnam.</p>
