--- a/pages/plan.html
+++ b/pages/plan.html
@@ -51,7 +51,7 @@
         <h1>Strategic Action Plan</h1>
     </div>
     <div class="statement">
-        <p>Mr. Nooka Reddy Garu's plan of action for the brighter future in inevitable. 
+        <p>Mr. Nooka Reddy's plan of action for the brighter future in inevitable. 
             His vision is to uplift the society and the nation with his strategic action plan.
             The plan includes various aspects such as rural development, education, health, and more.</p>
         </p>
