--- a/pages/PR folder/wellfare-pages/education.html
+++ b/pages/PR folder/wellfare-pages/education.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="circle-elements-container">
-        <h3>Mr. Reddy Garu has been providing free education to those who cannot afford, to support the families and the future.</h3>
+        <h3>Mr. Nooka Reddy has been providing free education to those who cannot afford, to support the families and the future.</h3>
         <ul>
             <li>
                 <img src="/images/school.png" alt="">
@@ -77,7 +77,7 @@
     </div>
 
     <div class="education-matter">
-        <p>Mr. Reddy Garu have provided free education to school and College students of economically lower background students. Reddy Garu supported many families to improve the family situations by providing free education to their children. Reddy Garu established various schools and colleges, And have been providing wuality education to students that are economically weak. Mr. Reddy Garu contributed a lot for the education system in various locations, and have been supporting the students to get quality education. </p>
+        <p>Mr. Nooka Reddy have provided free education to school and College students of economically lower background students. Nooka Reddy supported many families to improve the family situations by providing free education to their children. Nooka Reddy established various schools and colleges, And have been providing wuality education to students that are economically weak. Mr. Nooka Reddy contributed a lot for the education system in various locations, and have been supporting the students to get quality education. </p>
     </div>
 
 
