--- a/pages/about.html
+++ b/pages/about.html
@@ -141,7 +141,7 @@
     <div class="we-bg">
         <div class="we-do">
             <h1>Strategic Action Plan</h1>
-            <p>On being elected as MLC graduate Mr. Nooke Reddy Garu's plan of action for the development is sensational.</p>
+            <p>On being elected as MLC graduate Mr. Nooka Reddy's plan of action for the development is sensational.</p>
             <a href="plan.html">Know More</a>
         </div>
     </div>
