plan language update

--- a/pages/about.html
+++ b/pages/about.html
@@ -142,7 +142,7 @@
         <div class="we-do">
             <h1>Strategic Action Plan</h1>
             <p>On being elected as MLC graduate Mr. Nooka Reddy's plan of action for the development is sensational.</p>
-            <a href="plan.html">Know More</a>
+            <a href="plan2.html">Know More</a>
         </div>
     </div>
 
