--- a/pages/about.html
+++ b/pages/about.html
@@ -141,7 +141,7 @@
     <div class="we-bg">
         <div class="we-do">
             <h1>Strategic Action Plan</h1>
-            <p>On being elected as MLC graduate Mr. Nooka Reddy's plan of action for the development is sensational.</p>
+            <p>On being elected as MLC graduate Mr. Nooka Reddy Kolli's plan of action for the development is sensational.</p>
             <a href="plan2.html">Know More</a>
         </div>
     </div>
@@ -181,7 +181,7 @@
     <div class="sp-bg">
         <div class="spandana-spot">
             <h1>Spandana Compliant Form</h1>
-            <p>A strong support to all your problems from Mr. Nooka Reddy. Just let him know your problem in the compliant form and set your worries off the table. Mr. Nooka Reddy has got your back with solution to every problem.</p>
+            <p>A strong support to all your problems from Mr. Nooka Reddy Kolli. Just let him know your problem in the compliant form and set your worries off the table. Mr. Nooka Reddy Kolli has got your back with solution to every problem.</p>
             <a href="/pages/spandana.html">Spandana Compliant form</a>
         </div>
     </div>
