--- a/pages/spandana.html
+++ b/pages/spandana.html
@@ -58,7 +58,7 @@
 
     <div class="comp-title">
       <h1>Spandana Compliant Form</h1>
-      <p>Mr. Nooka Reddy came up with a step to fight for the better nation. As a part of it, with this spandana compliant form Nooka Reddy is going to take all your problems to the right persons, and fight till he gets the solution. Fill out your compliant, sit back and relax. Mr. Nooka Reddy's got your back!</p>
+      <p>Mr. Nooka Reddy Kolli came up with a step to fight for the better nation. As a part of it, with this spandana compliant form Nooka Reddy is going to take all your problems to the right persons, and fight till he gets the solution. Fill out your compliant, sit back and relax. Mr. Nooka Reddy's got your back!</p>
     </div>
     <form id="form" class="container m-4 pl-4" method="POST">
       <div class="field">
